things and things

--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
 <div ng-controller="context">
 <div class="jumbotron">
     	<h1>Adding Some Basic Contextual Information To The Intercept's Documents Page</h1>
-    	<h3><a href="#about">What Is This</a></h3>
+    	<h3>Filter By Article</h3>
+      <select class="form-control" ng-model="query.article_title"><option ng-repeat="t in titles">{{t.title | uppercase}}</option></select>
+      <h3><a href="#about">What Is This</a></h3>
 </div>
-    <div ng-repeat= "n in documents">
+    <div ng-repeat= "n in documents | filter:query">
       <div class="row">
       	<a href="{{n.file_url}}">
         <div class="col-md-3 col-md-offset-1 img" id ='{{n.divID}}' ng-style= "{'background-image':'url(http://www.documentcloud.org/documents/{{n.number}}/pages/{{n.divID}}-p1-normal.gif)'}" >
@@ -63,10 +65,10 @@
 <!-- container -->
 </div>
 <div id="about" class="jumbotron">
-		<p>Do you ever look at <a href="http://firstlook.org/theintercept/documents/">this page</a> and feel really annoyed at the fact you have no idea where a document came from or why you should care about it? No? No that was just me? Well, OK. 
-    <p>
+		<h3>Do you ever look at <a href="http://firstlook.org/theintercept/documents/">this page</a> and feel really annoyed?</h3>
+    <p>No? No that was just me? Well, OK.</p><p>
     So. This really annoys <em>me</em> because it's not really helpful to a researcher or someone who wants to maybe sift through the documents and get a bigger grasp of what's been learned from them. There's no search, no filters, no path back to the original article citing this document. How does anyone figure out what a document actually <em>proves</em>?</p>
-		<p>So I scraped a bunch of articles on The Intercept for links to documents hosted on their Documents page. Then I scraped some of the meta tags on those stories to get brief descriptions about them.</p>
+		<p>I scraped a bunch of articles on The Intercept for links to documents hosted on their Documents page. Then I scraped some of the meta tags on those stories to get brief descriptions about them. It isn't every single document because I didn't use a complete list of every Intercept article ever. This is a thing to work on, I know. Please help if you want to help!</p>
 		<p>Other news websites that have published Snowden documents have done a somewhat better job contextualizing their releases&mdash;like look how <a href="http://www.theguardian.com/world/interactive/2014/jan/16/nsa-dishfire-text-messages-documents">The Guardian</a> does it! And look at the work the <a href="https://www.aclu.org/nsa-documents-search">ACLU</a> is doing making Snowden documents searchable! This is not impossible, and I think it's something The Intercept cares about doing at some point. I mean, this is a thing I probably wouldn't have even made if <a href="http://github.com/joshbegley/NSA-Stories">Josh Begley</a> and Margot Williams over at The Intercept hadn't started compiling an index of released documents which gave me a csv of articles to use as a starting point. (Thanks Josh and Margot you are really cool.)</p>
     <p>This project was partly to solve a problem for me and partly so I could learn some things. I totally did! More on how I actually made this in <a href="http://github.com/lifewinning/NSA-Stories">the repo</a>.</p>
 
