--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 <!-- container -->
 </div>
 <div id="about" class="jumbotron">
-		<h3>Do you ever look at <a href="http://firstlook.org/theintercept/documents/">this page</a> and feel really annoyed?</h3>
+		<h1>What Is This Thing?</h1>
+    <h3>Do you ever look at <a href="http://firstlook.org/theintercept/documents/">this page</a> and feel really annoyed?</h3>
     <p>No? No that was just me? Well, OK.</p><p>
     So. This really annoys <em>me</em> because it's not really helpful to a researcher or someone who wants to maybe sift through the documents and get a bigger grasp of what's been learned from them. There's no search, no filters, no path back to the original article citing this document. How does anyone figure out what a document actually <em>proves</em>?</p>
 		<p>I scraped a bunch of articles on The Intercept for links to documents hosted on their Documents page. Then I scraped some of the meta tags on those stories to get brief descriptions about them. It isn't every single document because I didn't use a complete list of every Intercept article ever. This is a thing to work on, I know. Please help if you want to help!</p>
